Add random sampling

--- a/IEEE-CISFraudDetection.ipynb
+++ b/IEEE-CISFraudDetection.ipynb
@@ -27,11 +27,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client(n_workers=10)"
+    "SEED = 0\n",
+    "JOBS = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vladimir/anaconda3/envs/ml/lib/python3.7/site-packages/distributed/node.py:155: UserWarning: Port 8787 is already in use.\n",
+      "Perhaps you already have a cluster running?\n",
+      "Hosting the HTTP server on port 42709 instead\n",
+      "  http_address[\"port\"], self.http_server.port\n"
+     ]
+    }
+   ],
+   "source": [
+    "client = Client(n_workers=JOBS)"
    ]
   },
   {
@@ -3239,6 +3260,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.read_csv('./data/base_features/*.csv', header=0)\n",
+    "y = df.read_csv('./data/target/*.csv', header=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Delayed('int-5b05f153-be9c-4c80-a8da-54c65be6ec1d'), 8)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index1 = y[y['isFraud']==1].index\n",
+    "A = X.loc[index1, :]\n",
+    "index2 = y[y['isFraud']==0].index\n",
+    "B = X.loc[index2, :].sample(frac=0.1, random_state=SEED)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3247,7 +3301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3256,7 +3310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3265,7 +3319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3274,7 +3328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3449,7 +3503,7 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>\n",
-       "<div>Dask Name: get_dummies, 242 tasks</div>"
+       "<div>Dask Name: get_dummies, 99 tasks</div>"
       ],
       "text/plain": [
        "Dask DataFrame Structure:\n",
@@ -3460,10 +3514,10 @@
        "...                       ...    ...      ...      ...      ...                    ...            ...              ...        ...               ...          ...         ...                   ...         ...         ...         ...         ...         ...\n",
        "                          ...    ...      ...      ...      ...                    ...            ...              ...        ...               ...          ...         ...                   ...         ...         ...         ...         ...         ...\n",
        "                          ...    ...      ...      ...      ...                    ...            ...              ...        ...               ...          ...         ...                   ...         ...         ...         ...         ...         ...\n",
-       "Dask Name: get_dummies, 242 tasks"
+       "Dask Name: get_dummies, 99 tasks"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
