--- a/IEEE-CISFraudDetection.ipynb
+++ b/IEEE-CISFraudDetection.ipynb
@@ -4019,7 +4019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4039,24 +4039,25 @@
     "    \n",
     "        recall = recall_score(y_true=y_test, y_pred=y_pred)\n",
     "        precision = precision_score(y_true=y_test, y_pred=y_pred)\n",
+    "        f1 = f1_score(y_true=y_test, y_pred=y_pred)\n",
     "        \n",
-    "        print(f'precision: {precision:0.4f}, recall: {recall:0.4f}, f1: {}')"
+    "        print(f'precision: {precision:0.4f}, recall: {recall:0.4f}, f1: {f1:0.4f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision: 0.5418, recall: 0.1207\n",
-      "precision: 0.5841, recall: 0.1176\n",
-      "precision: 0.5329, recall: 0.1115\n",
-      "precision: 0.5813, recall: 0.1203\n",
-      "precision: 0.6005, recall: 0.1251\n"
+      "precision: 0.5418, recall: 0.1207, f1: 0.1975\n",
+      "precision: 0.5841, recall: 0.1176, f1: 0.1958\n",
+      "precision: 0.5329, recall: 0.1115, f1: 0.1845\n",
+      "precision: 0.5813, recall: 0.1203, f1: 0.1993\n",
+      "precision: 0.6005, recall: 0.1251, f1: 0.2071\n"
      ]
     }
    ],
@@ -4066,11 +4067,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "precision: 0.6682, recall: 0.3445, f1: 0.4547\n",
+      "precision: 0.6878, recall: 0.3465, f1: 0.4608\n",
+      "precision: 0.6888, recall: 0.3363, f1: 0.4520\n",
+      "precision: 0.7062, recall: 0.3548, f1: 0.4723\n",
+      "precision: 0.7194, recall: 0.3480, f1: 0.4691\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = XGBClassifier(random_state=SEED, n_jobs=JOBS)\n",
+    "ml_pipeline(X=X_, y=y, n_splits=5, model=model)"
+   ]
   }
  ],
  "metadata": {
