Add more statistics

--- a/IEEE-CISFraudDetection.ipynb
+++ b/IEEE-CISFraudDetection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,11 @@
     "from sklearn.manifold import TSNE\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.metrics import recall_score, precision_score, f1_score\n",
+    "from sklearn.metrics import recall_score, precision_score, f1_score, precision_recall_curve, auc\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from collections import namedtuple\n",
+    "from recordtype import recordtype"
    ]
   },
   {
@@ -4019,7 +4021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4027,6 +4029,9 @@
     "    \n",
     "    X = X.to_numpy()\n",
     "    y = y.to_numpy().reshape(-1, )\n",
+    "    \n",
+    "    Output = recordtype('Output', ['precision', 'recall', 'f1', 'auc', 'aucs'])\n",
+    "    output = Output(precision=0, recall=0, f1=0, auc=0, aucs=[])\n",
     "    \n",
     "    cv = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=SEED)\n",
     "    \n",
@@ -4036,34 +4041,57 @@
     "\n",
     "        model.fit(X=X_train, y=y_train)\n",
     "        y_pred = model.predict(X_test)\n",
+    "        y_probs = model.predict_proba(X_test)[:, 1]\n",
     "    \n",
     "        recall = recall_score(y_true=y_test, y_pred=y_pred)\n",
     "        precision = precision_score(y_true=y_test, y_pred=y_pred)\n",
     "        f1 = f1_score(y_true=y_test, y_pred=y_pred)\n",
+    "        precisions, recalls, _ = precision_recall_curve(y_true=y_test, probas_pred=y_probs)\n",
+    "        auc_ = auc(recalls, precisions)\n",
     "        \n",
-    "        print(f'precision: {precision:0.4f}, recall: {recall:0.4f}, f1: {f1:0.4f}')"
+    "        output.recall += recall\n",
+    "        output.precision += precision\n",
+    "        output.f1 += f1\n",
+    "        output.auc += auc_\n",
+    "        output.aucs.append(auc_)\n",
+    "        \n",
+    "        print(f'precision: {precision:0.4f}, recall: {recall:0.4f}, f1: {f1:0.4f}, auc: {auc_:0.4f}')\n",
+    "    \n",
+    "    output.recall /= n_splits\n",
+    "    output.precision /= n_splits\n",
+    "    output.f1 /= n_splits\n",
+    "    output.auc /= n_splits\n",
+    "    \n",
+    "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision: 0.5418, recall: 0.1207, f1: 0.1975\n",
-      "precision: 0.5841, recall: 0.1176, f1: 0.1958\n",
-      "precision: 0.5329, recall: 0.1115, f1: 0.1845\n",
-      "precision: 0.5813, recall: 0.1203, f1: 0.1993\n",
-      "precision: 0.6005, recall: 0.1251, f1: 0.2071\n"
+      "precision: 0.5530, recall: 0.1263, f1: 0.2056, auc: 0.3642\n",
+      "precision: 0.5180, recall: 0.1180, f1: 0.1923, auc: 0.3653\n",
+      "precision: 0.5981, recall: 0.1195, f1: 0.1992, auc: 0.3909\n",
+      "precision: 0.5635, recall: 0.1031, f1: 0.1743, auc: 0.3701\n",
+      "precision: 0.5484, recall: 0.1152, f1: 0.1904, auc: 0.3782\n",
+      "precision: 0.5061, recall: 0.1007, f1: 0.1679, auc: 0.3602\n",
+      "precision: 0.6025, recall: 0.1181, f1: 0.1975, auc: 0.3933\n",
+      "precision: 0.5736, recall: 0.1113, f1: 0.1865, auc: 0.3748\n",
+      "precision: 0.5833, recall: 0.1220, f1: 0.2018, auc: 0.3820\n",
+      "precision: 0.6168, recall: 0.1099, f1: 0.1865, auc: 0.3910\n",
+      "Output(precision=0.5663254030157457, recall=0.11440639824354595, f1=0.19019510315156368, auc=0.3769985557460079, aucs=[0.3641949479413502, 0.3653371216580762, 0.39086964530265517, 0.3700950013960338, 0.37819307815495173, 0.3601884548116257, 0.3933169559033227, 0.3747973056789837, 0.38203174820481756, 0.39096129840826216])\n"
      ]
     }
    ],
    "source": [
     "model = LogisticRegression(random_state=SEED, n_jobs=JOBS)\n",
-    "ml_pipeline(X=X_, y=y, n_splits=5, model=model)"
+    "output_lr = ml_pipeline(X=X_, y=y, n_splits=10, model=model)\n",
+    "print(output_lr)"
    ]
   },
   {
@@ -4075,24 +4103,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision: 0.6682, recall: 0.3445, f1: 0.4547\n",
-      "precision: 0.6878, recall: 0.3465, f1: 0.4608\n",
-      "precision: 0.6888, recall: 0.3363, f1: 0.4520\n",
-      "precision: 0.7062, recall: 0.3548, f1: 0.4723\n",
-      "precision: 0.7194, recall: 0.3480, f1: 0.4691\n"
+      "precision: 0.6752, recall: 0.3430, f1: 0.4549, auc: 0.5763\n",
+      "precision: 0.6564, recall: 0.3290, f1: 0.4383, auc: 0.5617\n",
+      "precision: 0.6938, recall: 0.3464, f1: 0.4621, auc: 0.5848\n",
+      "precision: 0.6810, recall: 0.3296, f1: 0.4442, auc: 0.5681\n",
+      "precision: 0.6917, recall: 0.3606, f1: 0.4741, auc: 0.5750\n",
+      "precision: 0.6759, recall: 0.3291, f1: 0.4427, auc: 0.5697\n",
+      "precision: 0.6936, recall: 0.3572, f1: 0.4716, auc: 0.5860\n",
+      "precision: 0.7104, recall: 0.3621, f1: 0.4796, auc: 0.5872\n",
+      "precision: 0.7198, recall: 0.3519, f1: 0.4727, auc: 0.6021\n",
+      "precision: 0.6952, recall: 0.3500, f1: 0.4656, auc: 0.5899\n",
+      "Output(precision=0.6893042527231616, recall=0.34588487976129756, f1=0.4605748140840856, auc=0.5800976368700016, aucs=[0.5763073966255765, 0.5617203539775477, 0.5848158274282811, 0.5681256675045765, 0.5750147570741974, 0.5697311920921255, 0.5860197163153988, 0.5872363610440677, 0.6021243262788218, 0.5898807703594225])\n"
      ]
     }
    ],
    "source": [
     "model = XGBClassifier(random_state=SEED, n_jobs=JOBS)\n",
-    "ml_pipeline(X=X_, y=y, n_splits=5, model=model)"
+    "output_xgb = ml_pipeline(X=X_, y=y, n_splits=10, model=model)\n",
+    "print(output_xgb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "distplot() got an unexpected keyword argument 'n_bins'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-89-81781599da5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_lr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maucs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'blue'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_bins\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdistplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_xgb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maucs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'red'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: distplot() got an unexpected keyword argument 'n_bins'"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.figure()\n",
+    "sns.distplot(output_lr.aucs, color='blue', n_bins=30)\n",
+    "sns.distplot(output_xgb.aucs, color='red')"
    ]
   }
  ],
