--- a/IEEE-CISFraudDetection.ipynb
+++ b/IEEE-CISFraudDetection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +32,7 @@
     "from sklearn.metrics import recall_score, precision_score, f1_score, precision_recall_curve, auc\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from scipy.stats import ttest_ind, ttest_rel\n",
     "from collections import namedtuple\n",
     "from recordtype import recordtype"
    ]
@@ -4090,8 +4091,7 @@
    ],
    "source": [
     "model = LogisticRegression(random_state=SEED, n_jobs=JOBS)\n",
-    "output_lr = ml_pipeline(X=X_, y=y, n_splits=10, model=model)\n",
-    "print(output_lr)"
+    "output_lr = ml_pipeline(X=X_, y=y, n_splits=10, model=model)"
    ]
   },
   {
@@ -4126,8 +4126,7 @@
    ],
    "source": [
     "model = XGBClassifier(random_state=SEED, n_jobs=JOBS)\n",
-    "output_xgb = ml_pipeline(X=X_, y=y, n_splits=10, model=model)\n",
-    "print(output_xgb)"
+    "output_xgb = ml_pipeline(X=X_, y=y, n_splits=10, model=model)"
    ]
   },
   {
@@ -4163,6 +4162,26 @@
     "sns.distplot(output_lr.aucs, color='blue', bins=5, label='LR')\n",
     "sns.distplot(output_xgb.aucs, color='red', bins=5, label='XGB')\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-37.547209580660585, pvalue=1.5004398139998155e-18)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ttest_ind(output_lr.aucs, output_xgb.aucs)"
    ]
   },
   {
