Polynomial and aucROC
add polynomial features and roc metric to pipeline

--- a/IEEE-CISFraudDetection.ipynb
+++ b/IEEE-CISFraudDetection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
     "from sklearn.manifold import TSNE\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.metrics import recall_score, precision_score, f1_score, precision_recall_curve, auc\n",
-    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "from sklearn.metrics import recall_score, precision_score, f1_score, precision_recall_curve, auc, roc_curve, roc_auc_score\n",
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler, PolynomialFeatures\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from scipy.stats import ttest_ind, ttest_rel\n",
     "from collections import namedtuple\n",
@@ -2966,12 +2966,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4206,17 +4201,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ml_pipeline(X, y, n_splits, model):\n",
+    "def ml_pipeline(X, y, n_splits, model, polynomial=False):\n",
     "    \n",
     "    X = X.to_numpy()\n",
     "    y = y.to_numpy().reshape(-1, )\n",
     "    \n",
-    "    Output = recordtype('Output', ['precision', 'recall', 'f1', 'auc', 'aucs'])\n",
-    "    output = Output(precision=0, recall=0, f1=0, auc=0, aucs=[])\n",
+    "    if polynomial:\n",
+    "        pol = PolynomialFeatures(interaction_only=True)\n",
+    "        X = pol.fit_transform(X)\n",
+    "        \n",
+    "    Output = recordtype('Output', ['precision', 'recall', 'f1', 'aucPR', 'aucROC','aucs'])\n",
+    "    output = Output(precision=0, recall=0, f1=0, aucPR=0, aucROC=0, aucs=[])\n",
     "    \n",
     "    cv = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=SEED)\n",
     "    \n",
@@ -4232,34 +4231,50 @@
     "        precision = precision_score(y_true=y_test, y_pred=y_pred)\n",
     "        f1 = f1_score(y_true=y_test, y_pred=y_pred)\n",
     "        precisions, recalls, _ = precision_recall_curve(y_true=y_test, probas_pred=y_probs)\n",
-    "        auc_ = auc(recalls, precisions)\n",
+    "        fpr, tpr, _ = roc_curve(y_true=y_test, y_score=y_probs)\n",
+    "        aucROC = roc_auc_score(y_true=y_test, y_score=y_probs)\n",
+    "        aucPR = auc(recalls, precisions)\n",
     "        \n",
     "        output.recall += recall\n",
     "        output.precision += precision\n",
     "        output.f1 += f1\n",
-    "        output.auc += auc_\n",
-    "        output.aucs.append(auc_)\n",
+    "        output.aucPR += aucPR\n",
+    "        output.aucROC += aucROC\n",
+    "        output.aucs.append(aucPR)\n",
     "        \n",
-    "        print(f'precision: {precision:0.4f}, recall: {recall:0.4f}, f1: {f1:0.4f}, auc: {auc_:0.4f}')\n",
+    "        print(f'precision: {precision:0.4f}, recall: {recall:0.4f}, f1: {f1:0.4f}, aucPR: {aucPR:0.4f}, aucROC: {aucROC:0.4f}')\n",
     "    \n",
     "    output.recall /= n_splits\n",
     "    output.precision /= n_splits\n",
     "    output.f1 /= n_splits\n",
-    "    output.auc /= n_splits\n",
+    "    output.aucPR /= n_splits\n",
+    "    output.aucROC /= n_splits\n",
+    "    \n",
+    "    print(f'Final - precision: {output.precision:0.4f}, recall: {output.recall:0.4f}, f1: {output.f1:0.4f}, aucPR: {output.aucPR:0.4f}, aucROC: {output.aucROC:0.4f}')\n",
     "    \n",
     "    return output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision: 0.6706, recall: 0.5269, f1: 0.5901, auc: 0.6781\n"
+      "precision: 0.6706, recall: 0.5269, f1: 0.5901, aucPR: 0.6781, aucROC: 0.7423\n",
+      "precision: 0.6681, recall: 0.5423, f1: 0.5987, aucPR: 0.6730, aucROC: 0.7323\n",
+      "precision: 0.6881, recall: 0.5443, f1: 0.6078, aucPR: 0.6881, aucROC: 0.7477\n",
+      "precision: 0.6795, recall: 0.5286, f1: 0.5946, aucPR: 0.6753, aucROC: 0.7354\n",
+      "precision: 0.6729, recall: 0.5436, f1: 0.6013, aucPR: 0.6690, aucROC: 0.7449\n",
+      "precision: 0.6689, recall: 0.5329, f1: 0.5932, aucPR: 0.6702, aucROC: 0.7360\n",
+      "precision: 0.6825, recall: 0.5431, f1: 0.6049, aucPR: 0.6934, aucROC: 0.7448\n",
+      "precision: 0.6631, recall: 0.5334, f1: 0.5912, aucPR: 0.6719, aucROC: 0.7384\n",
+      "precision: 0.6825, recall: 0.5494, f1: 0.6087, aucPR: 0.6843, aucROC: 0.7435\n",
+      "precision: 0.6843, recall: 0.5319, f1: 0.5986, aucPR: 0.6846, aucROC: 0.7417\n",
+      "Final - precision: 0.6760, recall: 0.5376, f1: 0.5989, aucPR: 0.6788, aucROC: 0.7407\n"
      ]
     }
    ],
@@ -4277,7 +4292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4286,7 +4301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4295,7 +4310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -4467,7 +4482,7 @@
        "4            0            0  "
       ]
      },
-     "execution_count": 235,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4478,29 +4493,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision: 0.7655, recall: 0.6730, f1: 0.7163, auc: 0.8017\n",
-      "precision: 0.7514, recall: 0.6652, f1: 0.7057, auc: 0.7856\n",
-      "precision: 0.7673, recall: 0.6652, f1: 0.7126, auc: 0.8081\n",
-      "precision: 0.7577, recall: 0.6583, f1: 0.7045, auc: 0.7935\n",
-      "precision: 0.7639, recall: 0.6704, f1: 0.7141, auc: 0.7931\n",
-      "precision: 0.7492, recall: 0.6578, f1: 0.7005, auc: 0.7970\n",
-      "precision: 0.7630, recall: 0.6670, f1: 0.7118, auc: 0.8061\n",
-      "precision: 0.7576, recall: 0.6670, f1: 0.7094, auc: 0.7938\n",
-      "precision: 0.7716, recall: 0.6820, f1: 0.7240, auc: 0.8127\n",
-      "precision: 0.7711, recall: 0.6781, f1: 0.7216, auc: 0.8103\n"
+      "precision: 0.7655, recall: 0.6730, f1: 0.7163, aucPR: 0.8017, aucROC: 0.8481\n",
+      "precision: 0.7514, recall: 0.6652, f1: 0.7057, aucPR: 0.7856, aucROC: 0.8407\n",
+      "precision: 0.7673, recall: 0.6652, f1: 0.7126, aucPR: 0.8081, aucROC: 0.8498\n",
+      "precision: 0.7577, recall: 0.6583, f1: 0.7045, aucPR: 0.7935, aucROC: 0.8467\n",
+      "precision: 0.7639, recall: 0.6704, f1: 0.7141, aucPR: 0.7931, aucROC: 0.8453\n",
+      "precision: 0.7492, recall: 0.6578, f1: 0.7005, aucPR: 0.7970, aucROC: 0.8409\n",
+      "precision: 0.7630, recall: 0.6670, f1: 0.7118, aucPR: 0.8061, aucROC: 0.8479\n",
+      "precision: 0.7576, recall: 0.6670, f1: 0.7094, aucPR: 0.7938, aucROC: 0.8446\n",
+      "precision: 0.7716, recall: 0.6820, f1: 0.7240, aucPR: 0.8127, aucROC: 0.8536\n",
+      "precision: 0.7711, recall: 0.6781, f1: 0.7216, aucPR: 0.8103, aucROC: 0.8568\n",
+      "Final - precision: 0.7618, recall: 0.6684, f1: 0.7120, aucPR: 0.8002, aucROC: 0.8474\n"
      ]
     }
    ],
    "source": [
     "model = XGBClassifier(random_state=SEED, n_jobs=JOBS)\n",
     "output_xgb = ml_pipeline(X=X_, y=y, n_splits=10, model=model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "precision: 0.7560, recall: 0.6730, f1: 0.7121, aucPR: 0.7999, aucROC: 0.8475\n",
+      "precision: 0.7539, recall: 0.6715, f1: 0.7103, aucPR: 0.7897, aucROC: 0.8428\n",
+      "precision: 0.7636, recall: 0.6812, f1: 0.7200, aucPR: 0.8113, aucROC: 0.8524\n",
+      "precision: 0.7474, recall: 0.6675, f1: 0.7052, aucPR: 0.7906, aucROC: 0.8437\n",
+      "precision: 0.7618, recall: 0.6810, f1: 0.7191, aucPR: 0.7934, aucROC: 0.8472\n",
+      "precision: 0.7531, recall: 0.6554, f1: 0.7008, aucPR: 0.7948, aucROC: 0.8411\n",
+      "precision: 0.7631, recall: 0.6859, f1: 0.7224, aucPR: 0.8046, aucROC: 0.8499\n",
+      "precision: 0.7563, recall: 0.6864, f1: 0.7196, aucPR: 0.7972, aucROC: 0.8457\n",
+      "precision: 0.7746, recall: 0.6820, f1: 0.7254, aucPR: 0.8176, aucROC: 0.8582\n",
+      "precision: 0.7742, recall: 0.6786, f1: 0.7232, aucPR: 0.8123, aucROC: 0.8600\n",
+      "Final - precision: 0.7604, recall: 0.6762, f1: 0.7158, aucPR: 0.8011, aucROC: 0.8489\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = XGBClassifier(random_state=SEED, n_jobs=JOBS)\n",
+    "output_xgb = ml_pipeline(X=X_, y=y, n_splits=10, model=model, polynomial=True)"
    ]
   },
   {
