--- a/IEEE-CISFraudDetection.ipynb
+++ b/IEEE-CISFraudDetection.ipynb
@@ -10912,7 +10912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10942,7 +10942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10952,7 +10952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10963,7 +10963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10972,7 +10972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10992,7 +10992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11001,7 +11001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -11022,7 +11022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11033,16 +11033,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LogisticRegression(random_state=SEED, n_jobs=JOBS)"
+    "model = XGBClassifier(random_state=SEED,\n",
+    "                      n_jobs=JOBS,\n",
+    "                      learning_rate=0.39950743177244114,\n",
+    "                      max_delta_step=10,\n",
+    "                      max_depth=10,\n",
+    "                      min_child_weight=1,\n",
+    "                      min_split_loss=1e-9,\n",
+    "                      reg_alpha=0.2370155334625268,\n",
+    "                      reg_lambda=1.0,\n",
+    "                      subsample=0.8723919681623099,\n",
+    "                      colsample_bylevel=1.0,\n",
+    "                      colsample_bynode=1.0,\n",
+    "                      colsample_bytree=1.0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11052,7 +11064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11061,7 +11073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
