--- a/FraudDetection-v2.ipynb
+++ b/FraudDetection-v2.ipynb
@@ -65,7 +65,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Data Cleaning"
+   ]
   },
   {
    "cell_type": "code",
@@ -344,6 +346,100 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "types={'DeviceInfo': 'object',\n",
+    "       'DeviceType': 'object',\n",
+    "       'R_emaildomain': 'object',\n",
+    "       'id_12': 'object',\n",
+    "       'id_15': 'object',\n",
+    "       'id_16': 'object',\n",
+    "       'id_28': 'object',\n",
+    "       'id_29': 'object',\n",
+    "       'id_31': 'object',\n",
+    "       'id_35': 'object',\n",
+    "       'id_36': 'object',\n",
+    "       'id_37': 'object',\n",
+    "       'id_38': 'object',\n",
+    "       'id_23': 'object',\n",
+    "       'id_27': 'object',\n",
+    "       'id_30': 'object',\n",
+    "       'id_33': 'object',\n",
+    "       'id_34': 'object'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = df.read_csv('./data/X_train/*.csv', dtype=types).set_index('TransactionID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    569877\n",
+       "1     20663\n",
+       "Name: isFraud, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train['isFraud'].value_counts().compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_pos = X_train.loc[X_train['isFraud']==1]\n",
+    "X_train_neg = X_train.loc[X_train['isFraud']==0].sample(frac=0.05, random_state=SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_sample = df.concat([X_train_pos, X_train_neg])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_sample = X_train_sample.compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_sample.to_csv('./data/X_train_sample.csv') "
+   ]
   }
  ],
  "metadata": {
